--- a/docs/professor/alex_miyamoto_mussi.mdx
+++ b/docs/professor/alex_miyamoto_mussi.mdx
@@ -30,10 +30,12 @@ export const data = {
           subject: "Eletricidade Básica",
           size: 4,
           teachers: [
-            "Alex Miyamoto Mussi"
+            "Alex Miyamoto Mussi",
+            "Jair Fajardo Junior"
           ],
           classroom: "",
           students: [
+            "ELE2025",
             "ELM2025"
           ],
           time: "19:00 - 19:50",
@@ -47,22 +49,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Eletricidade Básica",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Jair Fajardo Junior"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -78,7 +65,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
