--- a/docs/professor/elias_franco.mdx
+++ b/docs/professor/elias_franco.mdx
@@ -14,21 +14,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia e Extensão Rural",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -77,6 +63,19 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Sociologia e Extensão Rural",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
         {
           subject: "Construções e Instalações Rurais",
           size: 2,
