--- a/docs/professor/haroldo_yutaka_misunaga.mdx
+++ b/docs/professor/haroldo_yutaka_misunaga.mdx
@@ -6,21 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Empreendedorismo",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -57,7 +43,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "07:30 - 08:20",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -78,6 +64,19 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Empreendedorismo",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Gestão de Pessoas",
           size: 2,
