--- a/docs/professor/jair_fajardo_junior.mdx
+++ b/docs/professor/jair_fajardo_junior.mdx
@@ -39,6 +39,26 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Eletricidade Básica",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Jair Fajardo Junior"
+          ],
+          classroom: "",
+          students: [
+            "ELE2025",
+            "ELM2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
           subject: "Elementos de Automação",
           size: 2,
           teachers: [
@@ -54,27 +74,8 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Eletricidade Básica",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Jair Fajardo Junior"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
