--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -12,6 +12,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Filosofia II",
+          size: 1,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Filosofia I",
           size: 2,
           teachers: [
@@ -21,7 +34,7 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -41,24 +54,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "Filosofia II",
           size: 1,
@@ -68,6 +64,37 @@ export const data = {
           classroom: "Sala 14-2",
           students: [
             "COM2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Filosofia 4",
+          size: 1,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
           ],
           time: "09:25 - 10:15",
           color: ""
@@ -104,32 +131,6 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia II",
-          size: 1,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Filosofia 4",
-          size: 1,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Direito do Trabalho e do consumidor",
           size: 2,
           teachers: [
@@ -139,7 +140,7 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
