--- a/docs/professor/lechan_colares_santos.mdx
+++ b/docs/professor/lechan_colares_santos.mdx
@@ -30,6 +30,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Gestão de compras e estoque",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Gestão de Produção",
           size: 2,
           teachers: [
@@ -77,21 +90,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão de compras e estoque",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
