--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -10,7 +10,22 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -18,6 +33,10 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Língua Estrangeira Moderna - Espanhol",
@@ -28,24 +47,6 @@ export const data = {
           classroom: "Sala 5",
           students: [
             "IIW2023A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Língua Portuguesa I",
-          size: 1,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -77,16 +78,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura III",
-          size: 2,
+          subject: "Língua Portuguesa I",
+          size: 1,
           teachers: [
             "Michelli Cristina Galli"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 8-2",
           students: [
-            "COM2023"
+            "AGO2025"
           ],
-          time: "10:15 - 11:05",
+          time: "11:05 - 11:55",
           color: ""
         },
         {
