--- a/docs/professor/sabrina_kerkhoff.mdx
+++ b/docs/professor/sabrina_kerkhoff.mdx
@@ -74,19 +74,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Sabrina Kerkhoff"
-          ],
-          classroom: "Laboratório de Química",
-          students: [
-            "IIW2025A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Química II",
           size: 2,
           teachers: [
@@ -95,6 +82,19 @@ export const data = {
           classroom: "Laboratório de Química",
           students: [
             "COM2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
           ],
           time: "10:15 - 11:05",
           color: ""
