--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -11,32 +11,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Língua Estrangeira - Inglês",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
           subject: "Geografia I",
           size: 2,
           teachers: [
@@ -46,7 +20,20 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -81,10 +68,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Zootecnia Geral",
-          size: 2,
+          subject: "Sociologia I",
+          size: 1,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -94,16 +81,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Postural e Segurança no Trabalho",
-          size: 1,
+          subject: "Zootecnia Geral",
+          size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 8-2",
           students: [
             "AGO2025"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -138,10 +125,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -226,19 +213,6 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa I",
-          size: 1,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
@@ -248,20 +222,47 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Matemática I",
+          subject: "Língua Portuguesa I",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 8-2",
           students: [
             "AGO2025"
           ],
           time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "15:05 - 15:55",
           color: ""
         },
         {
