--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -11,23 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2025A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "História I",
+          subject: "Sociologia I",
           size: 1,
           teachers: [
-            "Jael dos Santos"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -37,10 +24,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia I",
+          subject: "História I",
           size: 1,
           teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
+            "Jael dos Santos"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -110,7 +97,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -125,7 +126,20 @@ export const data = {
           students: [
             "IIW2025A"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
