--- a/docs/sala/bloco_4/laboratorio_de_metrologia_b4.mdx
+++ b/docs/sala/bloco_4/laboratorio_de_metrologia_b4.mdx
@@ -15,19 +15,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia dos Materiais",
-          size: 2,
-          teachers: [
-            "Fábio Fernandes da Silva"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: [
-            "EIN2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Metrologia",
           size: 1,
           teachers: [
@@ -37,14 +24,22 @@ export const data = {
           students: [
             "EIN2024"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
+        },
+        {
+          subject: "Tecnologia dos Materiais",
+          size: 2,
+          teachers: [
+            "Fábio Fernandes da Silva"
+          ],
+          classroom: "Laboratório de Metrologia B4",
+          students: [
+            "EIN2025"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
         {
           subject: "Metrologia",
           size: 2,
@@ -59,6 +54,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
