--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -24,10 +24,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia III",
-          size: 1,
+          subject: "Literatura e Produção Textual III",
+          size: 2,
           teachers: [
-            "José Provetti Júnior"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -37,16 +37,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sanidade Animal",
-          size: 2,
+          subject: "Filosofia III",
+          size: 1,
           teachers: [
-            "Leiliane Cristine de Souza"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -81,19 +81,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Física III",
-          size: 2,
-          teachers: [
-            "Alex Soares de Brito"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "AGO2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Produção Animal II",
           size: 3,
           teachers: [
@@ -103,7 +90,20 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Física III",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -151,56 +151,13 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "André Alexandre Valentini"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Literatura e Produção Textual III",
+          subject: "Educação Física III",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Sociologia e Extensão Rural",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão e Empreendedorismo Rural",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Sala 12-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
             "AGO2023"
           ],
@@ -221,9 +178,54 @@ export const data = {
           color: ""
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "André Alexandre Valentini"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Gestão e Empreendedorismo Rural",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Matemática III",
           size: 2,
           teachers: [
+            "Elenice Josefa Kolancko Setti",
             "Mauro César de Souza Siena"
           ],
           classroom: "Laboratório de Informatica A",
@@ -252,10 +254,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia III",
+          subject: "Sociologia e Extensão Rural",
           size: 2,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Elias Franco"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -265,12 +267,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Física III",
+          subject: "Sanidade Animal",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Leiliane Cristine de Souza"
           ],
-          classroom: "Educação Física / Sala 1 B2",
+          classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
