--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -24,16 +24,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Artes II",
-          size: 2,
+          subject: "Filosofia II",
+          size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Literatura e Produção Textual II",
+          size: 1,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -81,10 +94,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia II",
-          size: 1,
+          subject: "Artes II",
+          size: 2,
           teachers: [
-            "José Provetti Júnior"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -94,23 +107,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Literatura e Produção Textual II",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Sociologia Rural",
+          subject: "História I",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "André Alexandre Valentini"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -138,10 +138,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Literatura e Produção Textual II",
-          size: 1,
+          subject: "Sociologia Rural",
+          size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -151,23 +151,24 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia II",
-          size: 2,
+          subject: "Literatura e Produção Textual II",
+          size: 1,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
@@ -182,10 +183,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
+          subject: "Geografia II",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -226,12 +227,13 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Biologia II",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Karina Dias Espartosa"
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
@@ -252,12 +254,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "História I",
+          subject: "Biologia II",
           size: 2,
           teachers: [
-            "André Alexandre Valentini"
+            "Karina Dias Espartosa"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "AGO2024"
           ],
@@ -278,10 +280,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática II",
+          subject: "Química II",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 13-2",
           students: [
