--- a/docs/turma/ago/ago2025.mdx
+++ b/docs/turma/ago/ago2025.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Sociologia I",
-          size: 1,
+          subject: "Geografia I",
+          size: 2,
           teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
+            "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -24,25 +24,25 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Estrangeira - Inglês",
-          size: 2,
+          subject: "Filosofia I",
+          size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 8-2",
           students: [
             "AGO2025"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Geografia I",
+          subject: "Biologia I",
           size: 2,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Leandro Luiz Borges"
           ],
-          classroom: "Sala 8-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "AGO2025"
           ],
@@ -120,10 +120,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Zootecnia Geral",
-          size: 2,
+          subject: "Sociologia I",
+          size: 1,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -133,16 +133,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Postural e Segurança no Trabalho",
-          size: 1,
+          subject: "Zootecnia Geral",
+          size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 8-2",
           students: [
             "AGO2025"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -190,10 +190,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia I",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -247,12 +247,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia I",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Cosme Oliveira da Silva"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Laboratório de Química",
           students: [
             "AGO2025"
           ],
@@ -265,19 +265,6 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa I",
-          size: 1,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
@@ -287,27 +274,41 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
           subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
             "AGO2025"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Matemática I",
+          subject: "Língua Portuguesa I",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -317,12 +318,13 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química I",
+          subject: "Matemática I",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 8-2",
           students: [
             "AGO2025"
           ],
