--- a/docs/turma/com/com2023.mdx
+++ b/docs/turma/com/com2023.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Empreendedorismo",
+          subject: "Física III",
           size: 2,
           teachers: [
-            "Haroldo Yutaka Misunaga"
+            "Vitor Prestes Luzio"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -37,10 +37,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Física III",
+          subject: "Marketing Estratégico",
           size: 2,
           teachers: [
-            "Vitor Prestes Luzio"
+            "Alexandre José Schumacher"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -107,16 +107,30 @@ export const data = {
           color: ""
         },
         {
-          subject: "Marketing Estratégico",
+          subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Alexandre José Schumacher"
+            "Celina de Oliveira Barbosa Gomes",
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 3-1",
           students: [
             "COM2023"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador III",
+          size: 1,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -138,19 +152,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia III",
-          size: 2,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Planejamento e Gestão financeira",
           size: 1,
           teachers: [
@@ -160,7 +161,20 @@ export const data = {
           students: [
             "COM2023"
           ],
-          time: "11:05 - 11:55",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -168,19 +182,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "André Alexandre Valentini"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "Geografia II",
           size: 2,
@@ -191,7 +192,20 @@ export const data = {
           students: [
             "COM2023"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "André Alexandre Valentini"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -213,10 +227,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Matemática III",
+          subject: "Empreendedorismo",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Haroldo Yutaka Misunaga"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -239,10 +253,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura III",
+          subject: "Biologia III",
           size: 2,
           teachers: [
-            "Michelli Cristina Galli"
+            "Gabriele Antico Freiria"
           ],
           classroom: "Sala 3-1",
           students: [
