--- a/docs/turma/com/com2024.mdx
+++ b/docs/turma/com/com2024.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Educação Física II",
+          subject: "Geografia I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Alexandre Roberto Valcarenghi"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -37,10 +37,11 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia I",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Alexandre Roberto Valcarenghi"
+            "Celina de Oliveira Barbosa Gomes",
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -81,94 +82,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Elizangela Mendes Pereira"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Biologia II",
-          size: 2,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "História I",
-          size: 2,
-          teachers: [
-            "André Alexandre Valentini"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Matemática II",
           size: 2,
           teachers: [
@@ -195,12 +108,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química II",
+          subject: "Biologia II",
           size: 2,
           teachers: [
-            "Sabrina Kerkhoff"
+            "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 14-2",
           students: [
             "COM2024"
           ],
@@ -210,7 +123,7 @@ export const data = {
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Filosofia II",
@@ -229,6 +142,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
+            "Celina de Oliveira Barbosa Gomes",
             "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 14-2",
@@ -249,6 +163,108 @@ export const data = {
             "COM2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "COM2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Karianny Aparecida Gerotto Del Mouro"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "História I",
+          size: 2,
+          teachers: [
+            "André Alexandre Valentini"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Educação Física II",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Karianny Aparecida Gerotto Del Mouro"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador II",
+          size: 1,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
