--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador",
+          subject: "Sociologia 4",
           size: 1,
           teachers: [
-            "Vitor Prestes Luzio"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -24,10 +24,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia 4",
-          size: 2,
+          subject: "Artes 3",
+          size: 1,
           teachers: [
-            "Alexandre Roberto Valcarenghi"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -37,12 +37,25 @@ export const data = {
           color: ""
         },
         {
-          subject: "Física 4",
+          subject: "Projeto Integrador",
+          size: 1,
+          teachers: [
+            "Vitor Prestes Luzio"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Química 4",
           size: 2,
           teachers: [
-            "Vinicius de Souza Lamego"
+            "Antonio Cesar Godoy"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 1-4",
           students: [
             "EIN2022"
           ],
@@ -55,12 +68,13 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Máquinas Térmicas e de Fluxo",
+          subject: "Processos de Fabricação 3",
           size: 2,
           teachers: [
+            "Fábio Fernandes da Silva",
             "Luiz Inácio Chaves"
           ],
-          classroom: "Sala 1-4",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2022"
           ],
@@ -68,10 +82,11 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática 4",
+          subject: "Lingua Estrangeira Moderna 3 - Inglês",
           size: 1,
           teachers: [
-            "Jonathan Prass Souza"
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -81,13 +96,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Processos de Fabricação 3",
+          subject: "Máquinas Térmicas e de Fluxo",
           size: 2,
           teachers: [
-            "Fábio Fernandes da Silva",
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Sala 1-4",
           students: [
             "EIN2022"
           ],
@@ -100,10 +114,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Industrial e Gestão da Produção",
-          size: 1,
+          subject: "História 4",
+          size: 2,
           teachers: [
-            "Fábio Fernandes da Silva"
+            "André Alexandre Valentini"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -113,23 +127,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia 4",
+          subject: "Manutenção Industrial e Gestão da Produção",
           size: 1,
           teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Artes 3",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
+            "Fábio Fernandes da Silva"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -157,10 +158,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Lingua Estrangeira Moderna 3 - Inglês",
+          subject: "Filosofia 4",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -183,10 +184,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química 4",
+          subject: "Geografia 4",
           size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Alexandre Roberto Valcarenghi"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -201,12 +202,12 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "História 4",
+          subject: "Física 4",
           size: 2,
           teachers: [
-            "André Alexandre Valentini"
+            "Vinicius de Souza Lamego"
           ],
-          classroom: "Sala 1-4",
+          classroom: "Laboratório de Física",
           students: [
             "EIN2022"
           ],
@@ -214,10 +215,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia 4",
+          subject: "Matemática 4",
           size: 1,
           teachers: [
-            "José Jurandir Pereira Junior"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 1-4",
           students: [
