--- a/docs/turma/elm/elm2025.mdx
+++ b/docs/turma/elm/elm2025.mdx
@@ -45,10 +45,12 @@ export const data = {
           subject: "Eletricidade Básica",
           size: 4,
           teachers: [
-            "Alex Miyamoto Mussi"
+            "Alex Miyamoto Mussi",
+            "Jair Fajardo Junior"
           ],
           classroom: "",
           students: [
+            "ELE2025",
             "ELM2025"
           ],
           time: "19:00 - 19:50",
