--- a/docs/professor/alexandre_jose_schumacher.mdx
+++ b/docs/professor/alexandre_jose_schumacher.mdx
@@ -6,7 +6,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Marketing Estratégico",
+          size: 2,
+          teachers: [
+            "Alexandre José Schumacher"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "COM2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -22,19 +36,6 @@ export const data = {
             "COM2023"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Marketing Estratégico",
-          size: 2,
-          teachers: [
-            "Alexandre José Schumacher"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
