--- a/docs/professor/antonio_cesar_godoy.mdx
+++ b/docs/professor/antonio_cesar_godoy.mdx
@@ -8,19 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Química 3",
-          size: 1,
-          teachers: [
-            "Antonio Cesar Godoy"
-          ],
-          classroom: "Laboratório de Química",
-          students: [
-            "EIN2023"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
           subject: "Química 1",
           size: 1,
           teachers: [
@@ -34,14 +21,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química 2",
+          subject: "Química 4",
           size: 2,
           teachers: [
             "Antonio Cesar Godoy"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 1-4",
           students: [
-            "EIN2024"
+            "EIN2022"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -83,6 +70,32 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Química 3",
+          size: 1,
+          teachers: [
+            "Antonio Cesar Godoy"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Química 2",
+          size: 2,
+          teachers: [
+            "Antonio Cesar Godoy"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2024"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Fundamentos da Química",
           size: 4,
           teachers: [
@@ -99,21 +112,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Química 4",
-          size: 2,
-          teachers: [
-            "Antonio Cesar Godoy"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
