--- a/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
+++ b/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
@@ -1,65 +1,93 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Elizangela Mendes Pereira",
+  title: "Celina de Oliveira Barbosa Gomes",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Celina de Oliveira Barbosa Gomes",
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira: Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 14-2",
           students: [
             "COM2024"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Elizangela Mendes Pereira"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "13:10 - 14:00",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
-          size: 2,
+          subject: "Língua Estrangeira: Inglês",
+          size: 1,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 7-2",
           students: [
-            "IIW2024A"
+            "COM2025"
           ],
           time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Matemática III",
+          subject: "Lingua Estrangeira Moderna 3 - Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Celina de Oliveira Barbosa Gomes",
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -71,68 +99,45 @@ export const data = {
       ]
     },
     {
-      dayName: "Quinta-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Matemática",
-          size: 4,
-          teachers: [
-            "Elizangela Mendes Pereira"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática II",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Elizangela Mendes Pereira"
+            "Celina de Oliveira Barbosa Gomes",
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 14-2",
           students: [
             "COM2024"
           ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
-          subject: "Matemática I",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Celina de Oliveira Barbosa Gomes",
+            "Pedro Leites Junior"
           ],
-          classroom: "Sala 8-2",
+          classroom: "Sala 7-2",
           students: [
-            "AGO2025"
+            "COM2025"
           ],
-          time: "15:05 - 15:55",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
@@ -195,7 +200,7 @@ export const data = {
   ]
 }
 
-# Elizangela Mendes Pereira
+# Celina de Oliveira Barbosa Gomes
 
 <div>
   {
