--- a/docs/professor/elenice_josefa_kolancko_setti.mdx
+++ b/docs/professor/elenice_josefa_kolancko_setti.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sérgio Takahashi",
+  title: "Elenice Josefa Kolancko Setti",
   base: "",
   weekClasses: [
     {
@@ -10,100 +10,63 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Metrologia",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: [
-            "EIN2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Metrologia",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico",
-          size: 3,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "EIN2025 - Grupo A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Desenho Técnico",
-          size: 3,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "EIN2025 - Grupo B"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Desenho Técnico",
+          subject: "Matemática III",
           size: 2,
           teachers: [
-            "Sérgio Takahashi"
+            "Elenice Josefa Kolancko Setti",
+            "Mauro César de Souza Siena"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Informatica A",
           students: [
-            "ELM2025"
+            "AGO2023"
           ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Desenho Técnico",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "ELM2025"
-          ],
-          time: "21:00 - 21:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -166,7 +129,7 @@ export const data = {
   ]
 }
 
-# Sérgio Takahashi
+# Elenice Josefa Kolancko Setti
 
 <div>
   {
