--- a/docs/professor/katia_cristiane_kobus_novaes.mdx
+++ b/docs/professor/katia_cristiane_kobus_novaes.mdx
@@ -8,14 +8,28 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Lingua Portuguesa 1",
+          subject: "Lingua Portuguesa 2",
           size: 2,
           teachers: [
             "Kátia Cristiane Kobus Novaes"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Sala 15-2",
           students: [
-            "EIN2025"
+            "EIN2024"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -52,6 +66,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Lingua Portuguesa 1",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "EIN2025"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Lingua Portuguesa 3",
           size: 2,
           teachers: [
@@ -73,6 +100,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
+            "Celina de Oliveira Barbosa Gomes",
             "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 14-2",
@@ -80,19 +108,6 @@ export const data = {
             "COM2024"
           ],
           time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Lingua Portuguesa 2",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "EIN2024"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -104,19 +119,6 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
         {
           subject: "Lingua Portuguesa 4",
           size: 2,
