--- a/docs/professor/kleber_augusto_michalichem.mdx
+++ b/docs/professor/kleber_augusto_michalichem.mdx
@@ -8,14 +8,14 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Educação Física II",
-          size: 2,
+          subject: "Educação Física 2",
+          size: 1,
           teachers: [
             "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
-            "COM2024"
+            "EIN2024"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -30,7 +30,20 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Educação Física 1",
+          size: 1,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "EIN2025"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -96,14 +109,15 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física 2",
-          size: 1,
+          subject: "Educação Física III",
+          size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
-            "EIN2024"
+            "AGO2023"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -112,7 +126,8 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -125,7 +140,8 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
@@ -144,55 +160,45 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física 1",
-          size: 1,
+          subject: "Educação Física II",
+          size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Educação Física / Sala 1 B2",
+          classroom: "Sala 14-2",
           students: [
-            "EIN2025"
+            "COM2024"
           ],
           time: "07:30 - 08:20",
           color: ""
         },
         {
           subject: "Educação Física I",
-          size: 1,
+          size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
-            "COM2025"
+            "AGO2025"
           ],
           time: "09:25 - 10:15",
           color: ""
         },
         {
           subject: "Educação Física I",
-          size: 2,
+          size: 1,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Educação Física / Sala 1 B2",
+          classroom: "Sala 7-2",
           students: [
-            "AGO2025"
+            "COM2025"
           ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Educação Física III",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
