--- a/docs/professor/leiliane_cristine_de_souza.mdx
+++ b/docs/professor/leiliane_cristine_de_souza.mdx
@@ -19,19 +19,6 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        },
-        {
-          subject: "Sanidade Animal",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
         }
       ]
     },
@@ -48,7 +35,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -76,7 +63,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Sanidade Animal",
+          size: 2,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
