--- a/docs/professor/mauro_cesar_de_souza_siena.mdx
+++ b/docs/professor/mauro_cesar_de_souza_siena.mdx
@@ -21,7 +21,7 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -56,13 +56,14 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
           subject: "Matemática III",
           size: 2,
           teachers: [
+            "Elenice Josefa Kolancko Setti",
             "Mauro César de Souza Siena"
           ],
           classroom: "Laboratório de Informatica A",
