--- a/docs/professor/pedro_leites_junior.mdx
+++ b/docs/professor/pedro_leites_junior.mdx
@@ -11,26 +11,40 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2025A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
             "Pedro Leites Junior"
           ],
           classroom: "Sala 7-2",
           students: [
             "COM2025"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Literatura e Produção Textual III",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Literatura e Produção Textual II",
+          size: 1,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -78,19 +92,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Literatura e Produção Textual II",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        },
-        {
           subject: "Comunicação Técnica",
           size: 1,
           teachers: [
@@ -109,6 +110,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Literatura e Produção Textual II",
           size: 1,
           teachers: [
@@ -118,26 +132,14 @@ export const data = {
           students: [
             "AGO2024"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Literatura e Produção Textual III",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
+            "Celina de Oliveira Barbosa Gomes",
             "Pedro Leites Junior"
           ],
           classroom: "Sala 7-2",
