--- a/docs/professor/tatiane_martinazzo_portz.mdx
+++ b/docs/professor/tatiane_martinazzo_portz.mdx
@@ -37,6 +37,24 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
         },
         {
           subject: "Educação Postural e Segurança no Trabalho",
@@ -48,27 +66,10 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Sociologia Rural",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "13:10 - 14:00",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -87,7 +88,7 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
