--- a/docs/professor/tiago_amaral_silva.mdx
+++ b/docs/professor/tiago_amaral_silva.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Elizangela Mendes Pereira",
+  title: "Tiago Amaral Silva",
   base: "",
   weekClasses: [
     {
@@ -12,27 +12,14 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
-          size: 2,
+          subject: "Projeto Integrador III",
+          size: 1,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Sala 3-1",
           students: [
-            "COM2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Elizangela Mendes Pereira"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
+            "COM2023"
           ],
           time: "13:10 - 14:00",
           color: ""
@@ -43,27 +30,43 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Educação Física III",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
-            "IIW2024A"
+            "AGO2023"
           ],
           time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Matemática III",
+          subject: "Educação Física I",
+          size: 1,
+          teachers: [
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
-            "COM2023"
+            "AGO2024"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -74,16 +77,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Matemática",
-          size: 4,
+          subject: "Projeto Integrador I",
+          size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Sala 7-2",
           students: [
-            "ELE2025"
+            "COM2025"
           ],
-          time: "19:00 - 19:50",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -92,44 +95,58 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Elizangela Mendes Pereira"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Sala 14-2",
           students: [
             "COM2024"
           ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Educação Física I",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "AGO2025"
+          ],
           time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Matemática I",
-          size: 2,
+          subject: "Educação Física I",
+          size: 1,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
-          classroom: "Sala 8-2",
+          classroom: "Sala 7-2",
           students: [
-            "AGO2025"
+            "COM2025"
           ],
-          time: "15:05 - 15:55",
+          time: "11:05 - 11:55",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador II",
+          size: 1,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "COM2024"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -195,7 +212,7 @@ export const data = {
   ]
 }
 
-# Elizangela Mendes Pereira
+# Tiago Amaral Silva
 
 <div>
   {
