--- a/docs/professor/vinicius_de_souza_lamego.mdx
+++ b/docs/professor/vinicius_de_souza_lamego.mdx
@@ -19,32 +19,11 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        },
-        {
-          subject: "Física 4",
-          size: 2,
-          teachers: [
-            "Vinicius de Souza Lamego"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "EIN2022"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Física 2",
@@ -56,13 +35,17 @@ export const data = {
           students: [
             "EIN2024"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Física 3",
@@ -73,6 +56,24 @@ export const data = {
           classroom: "Laboratório de Física",
           students: [
             "EIN2023"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Física 4",
+          size: 2,
+          teachers: [
+            "Vinicius de Souza Lamego"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2022"
           ],
           time: "07:30 - 08:20",
           color: ""
