--- a/docs/professor/yohana_diel_saheli.mdx
+++ b/docs/professor/yohana_diel_saheli.mdx
@@ -8,32 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Língua Estrangeira: Inglês",
-          size: 1,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Língua Estrangeira - Inglês",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
@@ -43,7 +17,21 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira: Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -52,42 +40,31 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Lingua Estrangeira Moderna 1 - Inglês",
-          size: 1,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "EIN2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
+            "Celina de Oliveira Barbosa Gomes",
             "Yohana Diel Saheli"
           ],
           classroom: "Sala 7-2",
           students: [
             "COM2025"
           ],
-          time: "11:05 - 11:55",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 3 - Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -100,19 +77,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Lingua Estrangeira Moderna 3 - Inglês",
-          size: 1,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
@@ -122,14 +86,22 @@ export const data = {
           students: [
             "IIW2025A"
           ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 1 - Inglês",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "EIN2024"
+          ],
           time: "09:25 - 10:15",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
@@ -140,6 +112,24 @@ export const data = {
           students: [
             "IIW2024A"
           ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Lingua Estrangeira Moderna 2 - Ingles",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "EIN2023"
+          ],
           time: "07:30 - 08:20",
           color: ""
         },
@@ -157,16 +147,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua Estrangeira Moderna 2 - Ingles",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
           teachers: [
             "Yohana Diel Saheli"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Sala 16-2",
           students: [
-            "EIN2023"
+            "IIW2024A"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Língua Estrangeira - Inglês",
+          size: 2,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
