--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -40,6 +40,7 @@ export const data = {
           subject: "Matemática III",
           size: 2,
           teachers: [
+            "Elenice Josefa Kolancko Setti",
             "Mauro César de Souza Siena"
           ],
           classroom: "Laboratório de Informatica A",
