--- a/docs/sala/bloco_2/educacao_fisica___sala_1_b2.mdx
+++ b/docs/sala/bloco_2/educacao_fisica___sala_1_b2.mdx
@@ -11,6 +11,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Educação Física 2",
+          size: 1,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "EIN2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Educação Física 3",
           size: 1,
           teachers: [
@@ -20,7 +33,20 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Educação Física 1",
+          size: 1,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "EIN2025"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -59,14 +85,15 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física 2",
-          size: 1,
+          subject: "Educação Física III",
+          size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
-            "EIN2024"
+            "AGO2023"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -75,7 +102,8 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
@@ -94,42 +122,17 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física 1",
-          size: 1,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "EIN2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
             "AGO2025"
           ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Educação Física III",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
