--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -24,16 +24,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Artes II",
-          size: 2,
+          subject: "Filosofia II",
+          size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Literatura e Produção Textual II",
+          size: 1,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -107,10 +120,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia II",
-          size: 1,
+          subject: "Artes II",
+          size: 2,
           teachers: [
-            "José Provetti Júnior"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -120,23 +133,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Literatura e Produção Textual II",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Sociologia Rural",
+          subject: "História I",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "André Alexandre Valentini"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -164,10 +164,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Literatura e Produção Textual II",
-          size: 1,
+          subject: "Sociologia Rural",
+          size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -177,16 +177,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia II",
-          size: 2,
+          subject: "Literatura e Produção Textual II",
+          size: 1,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -208,10 +208,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
+          subject: "Geografia II",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -265,6 +265,20 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa II",
           size: 1,
           teachers: [
@@ -275,19 +289,6 @@ export const data = {
             "AGO2024"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "História I",
-          size: 2,
-          teachers: [
-            "André Alexandre Valentini"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -304,10 +305,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática II",
+          subject: "Química II",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 13-2",
           students: [
