--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -11,10 +11,11 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Língua Estrangeira: Inglês",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes",
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -24,23 +25,24 @@ export const data = {
           color: ""
         },
         {
-          subject: "Física I",
-          size: 2,
+          subject: "Língua Estrangeira: Inglês",
+          size: 1,
           teachers: [
-            "Vitor Prestes Luzio"
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 7-2",
           students: [
             "COM2025"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Física I",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Vitor Prestes Luzio"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -68,10 +70,11 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
-          size: 2,
+          subject: "Língua Estrangeira: Inglês",
+          size: 1,
           teachers: [
-            "José Jurandir Pereira Junior"
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -90,20 +93,20 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
-          subject: "Língua Estrangeira: Inglês",
-          size: 1,
+          subject: "Filosofia I",
+          size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 7-2",
           students: [
             "COM2025"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -167,7 +170,8 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -180,6 +184,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
+            "Celina de Oliveira Barbosa Gomes",
             "Pedro Leites Junior"
           ],
           classroom: "Sala 7-2",
@@ -208,19 +213,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Matemática I",
           size: 2,
           teachers: [
@@ -230,7 +222,20 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -244,6 +249,19 @@ export const data = {
             "COM2025"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador I",
+          size: 2,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -278,19 +296,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Física I",
-          size: 1,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Direito do Trabalho e do consumidor",
           size: 2,
           teachers: [
@@ -300,7 +305,21 @@ export const data = {
           students: [
             "COM2025"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Educação Física I",
+          size: 1,
+          teachers: [
+            "Kleber Augusto Michalichem",
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
