--- a/docs/sala/bloco_4/sala_1-4.mdx
+++ b/docs/sala/bloco_4/sala_1-4.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador",
+          subject: "Sociologia 4",
           size: 1,
           teachers: [
-            "Vitor Prestes Luzio"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -24,10 +24,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia 4",
-          size: 2,
+          subject: "Artes 3",
+          size: 1,
           teachers: [
-            "Alexandre Roberto Valcarenghi"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -35,12 +35,52 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Projeto Integrador",
+          size: 1,
+          teachers: [
+            "Vitor Prestes Luzio"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Química 4",
+          size: 2,
+          teachers: [
+            "Antonio Cesar Godoy"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Lingua Estrangeira Moderna 3 - Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes",
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
         {
           subject: "Máquinas Térmicas e de Fluxo",
           size: 2,
@@ -51,20 +91,7 @@ export const data = {
           students: [
             "EIN2022"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática 4",
-          size: 1,
-          teachers: [
-            "Jonathan Prass Souza"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -73,10 +100,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Industrial e Gestão da Produção",
-          size: 1,
+          subject: "História 4",
+          size: 2,
           teachers: [
-            "Fábio Fernandes da Silva"
+            "André Alexandre Valentini"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -86,23 +113,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia 4",
+          subject: "Manutenção Industrial e Gestão da Produção",
           size: 1,
           teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Artes 3",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
+            "Fábio Fernandes da Silva"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -130,10 +144,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Lingua Estrangeira Moderna 3 - Inglês",
+          subject: "Filosofia 4",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -156,10 +170,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química 4",
+          subject: "Geografia 4",
           size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Alexandre Roberto Valcarenghi"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -174,23 +188,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "História 4",
-          size: 2,
-          teachers: [
-            "André Alexandre Valentini"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Filosofia 4",
+          subject: "Matemática 4",
           size: 1,
           teachers: [
-            "José Jurandir Pereira Junior"
+            "Jonathan Prass Souza"
           ],
           classroom: "Sala 1-4",
           students: [
