--- a/docs/turma/ele/ele2025.mdx
+++ b/docs/turma/ele/ele2025.mdx
@@ -42,14 +42,16 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Matemática",
+          subject: "Eletricidade Básica",
           size: 4,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Alex Miyamoto Mussi",
+            "Jair Fajardo Junior"
           ],
-          classroom: "Sala 12-2",
+          classroom: "",
           students: [
-            "ELE2025"
+            "ELE2025",
+            "ELM2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -78,11 +80,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Eletricidade Básica",
+          subject: "Fundamentos da Matemática",
           size: 4,
           teachers: [
-            "Alex Miyamoto Mussi",
-            "Jair Fajardo Junior"
+            "Elizangela Mendes Pereira"
           ],
           classroom: "Sala 12-2",
           students: [
